# quarter_car_sim

./: .gitignore  LICENSE  README.md  justfile  refs.txt  requirements.txt
env/: README.md  pyproject.toml
env/QuarterCar_env/: __init__.py  ode_model.py  road_generator.py
env/QuarterCar_env/wrappers/: __init__.py  action_repeat.py  episode_logger.py  normalize_observation.py
gym_env/: README.md  pyproject.toml
gym_env/QuarterCar_env/: __init__.py  ode_model.py  params.py  render_params.py  reward.py  road_generator.py
gym_env/QuarterCar_env/envs/: __init__.py  quarter_car_env.py
gym_env/QuarterCar_env/wrappers/: reward_scaler.py
gym_env/dummy_agent/: train.py
quarter_car_ws/quarter_car_core/: ode_model.py  params.py  quarter_car_env.py  road_generator.py
quarter_car_ws/src/control/: package.xml  setup.py
quarter_car_ws/src/control/control/: lqr_node.py  mpc_node.py  rl_node.py
quarter_car_ws/src/quarter_car_controllers/: package.xml  setup.py
quarter_car_ws/src/quarter_car_core/: setup.py
quarter_car_ws/src/quarter_car_gazebo/: package.xml  setup.py
quarter_car_ws/src/quarter_car_gazebo/launch/: compare.launch.py  eval_gazebo.launch.py  training.launch.py
quarter_car_ws/src/quarter_car_gazebo/quarter_car_gazebo/: sim_node.py
quarter_car_ws/src/quarter_car_sim/: package.xml  setup.py
scripts/: build_and_launch.sh  install_deps.sh  run_eval_gazebo.sh  run_training.sh
tests/: conftest.py  test_dynamics.py  test_env.py  test_ode_model.py  test_reward.py  test_road_generator.py
training/: evaluate.py  hyperparameter_search.py  train.py
training/configs/: algo_configs.yaml  env_config.yaml  ppo_config.yaml  sac_config.yaml  td3_config.yaml
(+18 files in other folders)
