[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["QuarterCar_env"]

[project]
name = "QuarterCar_env"
version = "0.0.1"
description = "Gymnasium environment for active suspension RL on a quarter-car 2-DOF model"
requires-python = ">=3.10"
dependencies = [
  "gymnasium",
  "numpy",
  "scipy",
  "matplotlib",
  "Pillow",
]
