<?xml version="1.0"?>
<package format="3">
  <name>control</name>
  <version>0.1.0</version>
  <description>RL, LQR, and MPC controller nodes for quarter-car active suspension</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
