<?xml version="1.0"?>
<package format="3">
  <name>quarter_car_gazebo</name>
  <version>0.1.0</version>
  <description>ROS2 simulation node and Gazebo bridge for quarter-car active suspension</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_bridge</depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
